Fix pmap_dcache_wb_pou in the new armv6 pmap to correctly achieve icache consistency from ptrace.

PR:		199739
Submitted by:	Jurgen Weiss <weiss at uni-mainz.de> (original version)
Submitted by:	Svatopluk Kraus <onwahe at gmail.com>

Former-commit-id: b11316e80fcfc10e5fde5b07bbece167eb76a1bc